--- a/landing.css
+++ b/landing.css
@@ -2,6 +2,8 @@ body{
     background-image: url("background.webp");
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: "arial";
+    color: white;
 }
 h2{
     color: white;
